syntax = "proto3";
option go_package = "github.com/celestebrant/books";
import "google/protobuf/timestamp.proto";

service Books {
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
    rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
}

message Book {
    string id = 1;
    string title = 2;
    string author = 3;
    google.protobuf.Timestamp creation_time = 4;
}

message CreateBookRequest {
    Book book = 1;
    string request_id = 2;
}

message CreateBookResponse {
    Book book = 1;
}

message ListBooksRequest {
    string author = 1;
    string title = 2;
    int64 page_size = 3;
    string next_page_token = 4;
}

message ListBooksResponse {
    repeated Book books = 1;
    string next_page_token = 2;
}
